--- a/style.css
+++ b/style.css
@@ -9,4 +9,42 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.container {
+   text-align: center;
+}
+
+.progress {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+}
+
+.circle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    border: 3px solid #3498db;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+}
+
+.btn {
+    background: #3498db;
+    color: white;
+    border: none;
+    text-align: center;
+    font-size: 14px;
+    border-radius: 6px;
+    padding: 8px 30px 8px 30px;
+    margin: 5px;
+}
+
+.btn:disabled {
+    background: #E0E0E0;
 }
