--- a/style.css
+++ b/style.css
@@ -11,21 +11,52 @@
 
 body {
     font-family: "Muli", sans-serif;
+    background: #f6f7fb;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     overflow: hidden;
+    margin: 0;
 }
 
 .container {
    text-align: center;
 }
 
-.progress {
+.progress-container {
     position: relative;
     display: flex;
     justify-content: space-between;
+    position: relative;
+    margin: 0px 0px 30px;
+    max-width: 100%;
+    width: 350px;
+    margin-bottom: 30px;
+}
+
+.progress-container::before {
+    content: "";
+    background-color: var(--line-border-empty);
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    width: 100%;
+    height: 4px;
+    z-index: -1;
+}
+
+.progress {
+    background-color: var(--line-border-fill);
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    width: 0%;
+    height: 4px;
+    z-index: -1;
+    transition: 0.4s ease;
 }
 
 .circle {
@@ -34,28 +65,42 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 16px;
+    color: #999999;
     border: 3px solid var(--line-border-empty);
     border-radius: 50%;
     width: 30px;
     height: 30px;
+    min-height: auto;
+    min-width: auto;
+    transition: 0.4s ease;
 }
 
 .circle.active {
-    background: #ffffff;
     border-color: var(--line-border-fill)
 }
 
 .btn {
-    background: #3498db;
+    background: var(--line-border-fill);
     color: white;
-    border: none;
+    border: 0;
     text-align: center;
     font-size: 14px;
     border-radius: 6px;
-    padding: 8px 30px 8px 30px;
+    padding: 8px 30px;
     margin: 5px;
+    cursor: pointer;
+    font-family: inherit;
+}
+
+.btn:active {
+    transform: scale(0.98);
+}
+
+.btn:focus {
+    outline: 0;
 }
 
 .btn:disabled {
-    background: #E0E0E0;
+    background-color: var(--line-border-empty);
+    cursor: not-allowed;
 }
